# collector-of-collectors

./: .env.example  .gitignore  README.md  collection-of-collector.txt  collection-of-collectors-working.txt  collector.py  collectors.txt  github_sync.py  main.py  pyproject.toml  tester.py
.github/workflows/: ci.yml
scripts/: install_systemd_service.sh
